Copy bat installer to vm/wince folder. Removed WMOBILE installer and updated CEInstall.ini.

--- a/TotalCrossSDK/etc/tools/makecab/CEinstall.ini
+++ b/TotalCrossSDK/etc/tools/makecab/CEinstall.ini
@@ -3,4 +3,4 @@ Version    = 1.0
 Component  = TotalCrossVM
 [TotalCrossVM]
 Description   = TotalCross Virtual Machine (www.totalcross.com)
-CabFiles      = totalcross.HPC211_ARM.CAB,totalcross.PocketPC_ARM.CAB,totalcross.PocketPC_MIPS.CAB,totalcross.PocketPC_SH3.CAB,totalcross.HPC2000_ARM.CAB
+CabFiles      = TotalCross.CAB
