--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -506,8 +506,6 @@ target: device
   <mkdir dir="${dist}" />
   
   <!-- all but ui classes -->
-  <delete file="${output}/tcsdk2.jar"/>
-  <delete file="${output}/tcsdk2_.jar"/>
   <copy file="${src}/totalcross/chartypes.bin" todir="${output}/classes/totalcross"/>
   <jar destfile="${output}/tcsdk2_.jar" compress="yes" update="no">
     <fileset dir="${output}/classes"
@@ -545,13 +543,11 @@ target: device
   
   <!-- ui classes -->
   
-  <delete file="${output}/tcsdk2.jar"/>
-  <delete file="${output}/tcsdk2_.jar"/>
   <jar destfile="${output}/tcsdk2_.jar" compress="yes" update="no">
     <fileset dir="${output}/classes"
     includes="totalcross/res/**,totalcross/ui/*.class,totalcross/ui/chart/*.class,totalcross/ui/event/*.class,totalcross/ui/font/*.class,totalcross/ui/gfx/*.class,totalcross/ui/html/*.class,totalcross/ui/image/*.class,totalcross/ui/media/*.class,totalcross/ui/anim/*.class,totalcross/ui/html/ui/*.class,totalcross/ui/tree/*.class,totalcross/ui/dialog/*.class"
     />
-    <fileset dir="${src}" includes="totalcross/res/**/*.mp3,totalcross/res/**/*.png" />
+    <fileset dir="${src}" includes="totalcross/res/**/*.mp3,totalcross/res/**/*.gif,totalcross/res/**/*.png" />
   </jar>
 
    <proguard warn="false" shrink="false" allowaccessmodification="false" optimize="false" overloadaggressively="false" obfuscate="true" verbose="true" ignorewarnings="true" preverify="false" printmapping="${dist}/device_${versionStr}.map">
