--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -305,8 +305,8 @@ target: desktop
        <keep name="tc.tools.deployer.bzip2.*"><field access="public protected" /><method access="public protected" /></keep> 
        <keep name="tc.tools.NativeMethodsPrototypeGenerator"><field  access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.FontGenerator"><field  access="public protected" /><method access="public protected" /></keep>
-       <keep name="tc.tools.RegisterSDK"><field  access="public" /><method access="public" /></keep>
-       <keep name="tc.tools.RegisterSDK$*"><field  access="public" /><method access="public" /></keep>
+       <keep name="tc.tools.RegisterSDK"><field  access="public protected" /><method access="public protected" /></keep>
+       <keep name="tc.tools.RegisterSDK$*"><field  access="public protected" /><method access="public protected" /></keep>
        <keep name="tc.tools.SW2TC"><field access="public protected" /><method access="public protected" /></keep>
        <!-- keep some method names, otherwise Hashtable class and dump will not work. -->
        <keepclassmembernames>
@@ -541,6 +541,7 @@ target: device
     <arg line="${tcdeploy_line}"/>
     <arg line="-win32"/>
     <arg line="/a TCvm"/>
+    <arg line="/r 54434C428C28BD4E4AB111CE"/>
   </java>
 
   <copy file="${output}/install/win32/TCBase.tcz" todir="${dist}/vm"/>
@@ -578,6 +579,7 @@ target: device
     <arg line="${tcdeploy_line}"/>
     <arg line="-win32"/>
     <arg line="/a TCvm"/>
+    <arg line="/r 54434C428C28BD4E4AB111CE"/>
   </java>
 
   <copy file="${output}/install/win32/TCUI.tcz" todir="${dist}/vm"/>
@@ -632,6 +634,7 @@ target: samples
        <arg value="${output}/classes/tc/samples/${app.srcdir}/${app.name}.class"/>
        <arg line="${tcdeploy_line}"/>
        <arg line="${supportedPlatforms}"/>
+       <arg line="/r 54434C428C28BD4E4AB111CE"/>
    </java>
    <delete failonerror="false"><fileset dir="${target.dir}" includes="*.*,${app.name},start"/></delete>
 </target>
