--- a/TotalCrossVM/builders/xcode/tcvm.xcodeproj/xcshareddata/xcschemes/tcvm.xcscheme
+++ b/TotalCrossVM/builders/xcode/tcvm.xcodeproj/xcshareddata/xcschemes/tcvm.xcscheme
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -48,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0F003EB2150FEBBF004F0653"
+            BuildableName = "libtcvm.a"
+            BlueprintName = "tcvm"
+            ReferencedContainer = "container:tcvm.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
