updated to android 21

--- a/TotalCrossVM/builders/android/apps/tcvm/.classpath
+++ b/TotalCrossVM/builders/android/apps/tcvm/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="libs/activation.jar"/>
 	<classpathentry kind="lib" path="libs/additionnal.jar"/>
 	<classpathentry kind="lib" path="libs/mail.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
