--- a/TotalCrossVM/builders/vc2008/Motorola.vcproj
+++ b/TotalCrossVM/builders/vc2008/Motorola.vcproj
@@ -112,7 +112,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Pocket PC 2003 (ARMV4)"
-			OutputDirectory="$(SolutionDir)/../../../../output/vc2008/$(PlatformName)/Release"
+			OutputDirectory="$(SolutionDir)/../../../../output/release/TotalCrossSDK/dist/vm/wince"
 			IntermediateDirectory="$(SolutionDir)/../../../../temp/vc2008/$(PlatformName)/Motorola/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
