--- a/TotalCrossVM/builders/vc2008/Pidion.vcproj
+++ b/TotalCrossVM/builders/vc2008/Pidion.vcproj
@@ -108,7 +108,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Pocket PC 2003 (ARMV4)"
-			OutputDirectory="$(SolutionDir)/../../../../output/vc2008/$(PlatformName)/Release"
+			OutputDirectory="$(SolutionDir)/../../../../output/release/TotalCrossSDK/dist/vm/wince"
 			IntermediateDirectory="$(SolutionDir)/../../../../temp/vc2008/$(PlatformName)/Pidion/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
