path to key store should be relative instead of absolute

--- a/TotalCrossVM/builders/android/apps/tcvm/build.properties
+++ b/TotalCrossVM/builders/android/apps/tcvm/build.properties
@@ -22,6 +22,6 @@ assets.dir=deploy/assets
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 key.store.password=@ndroid$w
-key.store=P:/gitrepo/TotalCross/TotalCrossSDK/etc/security/tcandroidkey.keystore
+key.store=../../../../../TotalCrossSDK/etc/security/tcandroidkey.keystore
 key.alias=tcandroidkey
 key.alias.password=@ndroidsw
