--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
@@ -4631,6 +4631,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='NO RAS Release|ARM'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='RAS Release|ARM'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='DEMO Debug|ARM'">NotUsing</PrecompiledHeader>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='DEMO Debug|Win32'">false</CompileAsWinRT>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='DEMO Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\src\nm\net\ConnectionManager.c">
       <BufferSecurityCheck Condition="'$(Configuration)|$(Platform)'=='DEMO Debug|ARM'">false</BufferSecurityCheck>
