--- a/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
+++ b/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
@@ -26,6 +24,14 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Take pictures</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Find current location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Find current location when in use</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Recover picture taken</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
