--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -37,6 +37,7 @@
 </condition>
 <property name="rootpath"      value="p:"/> <!-- MUST BE ABSOLUTE PATH -->
 <property file="${rootpath}/userpaths.properties"/>
+<property name="buildNumber" value="-1" /> <!-- set by jenkins -->
 
 <!-- javac settings -->
 <property name="compile.listfiles"       value="no"/>
@@ -156,7 +157,6 @@ target: buildWin32 - Generate the files for Windows 98 and beyond
    <concat destfile="${source.vm.path}/src/init/compilation.date">#define COMPILATION_DATE ${DSTAMP}${line.separator}</concat>
    <concat destfile="${source.sdk.path}/src/ras/CompilationDate4B.java">package ras; public class CompilationDate4B {public static final int COMPILATION_DATE = ${DSTAMP} ^ 12341234;}</concat>
 
-    <property name="buildNumber" value="-1" />
    <replace file="${source.sdk.path}/src/totalcross/sys/Settings.java" token="public static int buildNumber = 000" value="public static int buildNumber = ${buildNumber}"/>
    <replace file="${source.sdk.path}/src/totalcross/android/Settings4A.java" token="public static int buildNumber = 000" value="public static int buildNumber = ${buildNumber}"/>
 </target>
@@ -189,7 +189,7 @@ target: buildSkeleton - Build the folders
       <fileset dir="${source.sdk.path}/dist" includes="*.jar"/>
       </delete>
 
-   <echo message="Building TotalCross SDK"/>
+   <echo message="Building TotalCross SDK build ${buildNumber}"/>
    <ant antfile="build.xml" dir="${source.sdk.path}" target="clean"           inheritAll="false"/>
    <ant antfile="build.xml" dir="${source.sdk.path}" target="build"           inheritAll="false"/>
    <ant antfile="build.xml" dir="${source.sdk.path}" target="javadoc"         inheritAll="false">
