adding build number to installer's message

--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -291,7 +291,7 @@ target: buildInstalls - run installshield to create the SDK and Samples
   <!-- update readme files -->
   <copy file="SDK_sfx.diz" toDir="${rootpath}/">
     <filterset>
-      <filter token="VERSION" value="${tc.version}"/>
+      <filter token="VERSION" value="${tc.version}.${buildNumber}"/>
     </filterset>
   </copy>
 
