--- a/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
+++ b/TotalCrossVM/builders/xcode/TotalCross/TotalCross-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.superwaba.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
