--- a/TotalCrossVM/.gitignore
+++ b/TotalCrossVM/.gitignore
@@ -8,3 +8,4 @@ builders/uedit.LARDOCELAR.Guilherme.pui
 builders/uedit.prj
 builders/chime.mp3
 src/launchers/android/lint.xml
+builders/xcode/totalcross_ios_devkeys
