--- a/TotalCrossVM/.gitignore
+++ b/TotalCrossVM/.gitignore
@@ -9,3 +9,4 @@ builders/uedit.prj
 builders/chime.mp3
 src/launchers/android/lint.xml
 builders/xcode/totalcross_ios_devkeys
+builders/uedit.GUILHERMECHAZAN.g.pui
